# reactive-modules

./: .gitignore  Cargo.toml  LICENSE.md  README.md  justfile  pyproject.toml
base/: Cargo.toml
python/: Cargo.toml  README.md  build.rs  conftest.py  pyproject.toml
python/benchmarks/svcomp/: AliasDarteFeautrierGonnord_SAS2010_easy1.py  ChenFlurMukhopadhyay_SAS2012_Ex2_01.py  __init__.py  __main__.py  _bench.py  _domain.py  _equiv.py  _farkas.py  _invariants.py  _lean.py  _template.py  _train.py  _verify_ranking.py
python/benchmarks/svcomp/dsl/: AliasDarteFeautrierGonnord_SAS2010_cousot9.py  AliasDarteFeautrierGonnord_SAS2010_easy1.py  AliasDarteFeautrierGonnord_SAS2010_easy2_1.py  AliasDarteFeautrierGonnord_SAS2010_easy2_2.py  AliasDarteFeautrierGonnord_SAS2010_ndecr.py  AliasDarteFeautrierGonnord_SAS2010_speedFails4.py  AliasDarteFeautrierGonnord_SAS2010_speedpldi2.py  AliasDarteFeautrierGonnord_SAS2010_speedpldi3.py  AliasDarteFeautrierGonnord_SAS2010_speedpldi4.py  AliasDarteFeautrierGonnord_SAS2010_terminate.py  (+49 more)
python/docs/: simulator-tutorial.md
python/docs/examples/: test_simulator.py
python/docs/tutorials/: simulator.ipynb
python/examples/: interpreter.py  run_twobitcounter.py  tui.py  ui_gridworld.py  ui_simpleenv.py  ui_twobitcounter.py
python/scripts/: get_python_flags.py  ui_gridworld.py  ui_simpleenv.py  ui_twobitcounter.py
python/scripts/ui/: run_twobitcounter.py  ui_gridworld.py  ui_simpleenv.py  ui_twobitcounter.py  ui_visual_demo.py
python/scripts/visual/: module_def.py  ui_watch.py
python/src/: any.rs  atom.rs  context.rs  downcast.rs  itype.rs  lia.rs  lib.rs  module.rs  pytensor.rs  pyval.rs  term.rs  theory.rs  typechecking.rs  types.rs  unrolling.rs  visual.rs  wire.rs
python/src/interpreter/: eval.rs  mod.rs  state.rs
python/src/lean/: mod.rs  tensor.rs  translate.rs
python/src/lia/: atom.rs  mod.rs  module.rs  term.rs
python/src/smt/: mod.rs  pyval.rs  unrolling.rs  wrappedatom.rs  wrappedcontext.rs  wrappedmodule.rs  wrappedterm.rs
python/src/torch/: atom.rs  context.rs  dtype.rs  itype.rs  mod.rs  module.rs  wire.rs  wrappedatom.rs  wrappedcontext.rs  wrappedmodule.rs  wrappedterm.rs
python/src/toy/: mod.rs  util.rs  wrappedatom.rs  wrappedcontext.rs  wrappedmodule.rs  wrappedterm.rs
python/tests/: base.py  conftest.py  load.py  run_twobitcounter.py  test.py  test_analyzer.py  test_base.py  test_basic_modules.py  test_bmc.py  test_downcast.py  test_dsl.py  test_eval.py  test_expr.py  test_interpreter.py  test_lean_counter.py  test_lean_diagram.py  test_lean_gym_simple.py  test_lean_linear.py  test_lean_svcomp.py  test_lean_twocounter.py  test_lia.py  test_lia_errors.py  test_load.py  test_magic_ai.py  test_pattern.py  test_simple_module.py  test_smv_parser.py  test_svcomp_domain.py  test_torch.py  test_twobitcounter_interp.py  test_type.py  test_verith_cli.py
python/tests/fixtures/: counter.py  matrix_counter.py  run_svcomp_tests.sh  simple_env.py  svcomp_collatz_bounded.py  svcomp_countdown.py  svcomp_gcd.py  svcomp_nested.py  svcomp_twovars.py  twobit.py  twobit_env.py
python/tests/gym/: agent.py  environments.py  main.py  qnetworks.py  test.py  test_analyzer.py  test_env.py  test_gym.py  test_gym_lean.py  test_numpy_arrays.py  test_training.py  train.py
python/tests/lean/: Playground.lean  ReflectionProto.lean  ZerothHammer.lean  ZerothHammerTests.lean  conftest.py  lake-manifest.json  lakefile.toml  test_lean_hammer.py
python/tests/smt/: bmc.py  test.py  test_basic.py  test_obligations.py  test_smtlib.py
python/tests/smv_fixtures/: test_itypes.smv
python/tests/torch/: base.py  test.py  test_base.py  test_simple_module.py
python/tests/toy/: test.py  test_basic.py
python/ui/: run_twobitcounter.py  tui.py  ui_gridworld.py  ui_simpleenv.py  ui_twobitcounter.py
python/zrth/: __init__.py  analyzer.py  bmc.py  build.py  builder.py  context.py  dsl.py  eexpr.py  eval.py  expr.py  lia.pyi  module.py  sugar.py  visual.py  zrth.pyi
python/zrth/examples/: __init__.py  interpreter.py  tui.py
python/zrth/gym/: README.md  __init__.py  agent.py  analyzer.py  backend.py  context.py  converter.py  environments.py  main.py  module.py  qnetwork.py  qnetworks.py  simple_env.py  test.py  test_composition.py  test_converter.py  zrth_module.py
python/zrth/lean/: README.md  __init__.py  cert.py  circ.py  common.py  constants.py  diagram.py  magic.py  magic_ai.py  magic_cegar.py  main.py  native.py  project.py  smt_encode.py  smt_module.py  smt_prompt.py  smt_to_lean.py  template_env.py  translate.py
python/zrth/smt/: __init__.py  context.py  module.py  z3.py
python/zrth/smv/: __init__.py  grammar.lark  parser.py
python/zrth/torch/: __init__.py  context.py  exprs.py  global_ctx.py  ll.py  module.py  translation.py
python/zrth/toy/: context.py  module.py  term.py
python/zrth/visual/: __init__.py  server.py  template.html
theory/: Cargo.toml  build.rs
theory/src/: any.rs  bool.rs  bv.rs  float.rs  int.rs  lia.rs  lib.rs  lra.rs  mat.rs  nat.rs  python.rs  real.rs  rla.rs  tensor.rs
theory/tests/: mat.rs  mix.rs  mk_theory.rs  term.rs
torch/: Cargo.toml  README.md  build.rs  pyproject.toml  requirements.txt
torch/python/bindings/: __init__.py  context.py  term.py
torch/python/zrmtorch/: __init__.py  module.py
torch/scripts/: get_python_flags.py
torch/src/: context.rs  html.rs  lib.rs  pyatom.rs  pytensor.rs  pyterm.rs  pyval.rs  term.rs  wrappedatom.rs  wrappedmodule.rs  wrappedterm.rs
torch/tests/: fun.py  lingebra_ex1.py  module.py  test.py  test2.py
toy/: Cargo.toml  README.md
toy/src/: context.rs  dtype.rs  instruction.rs  itype.rs  lib.rs  mat.rs  term.rs  val.rs
toy/src/conversions/: mod.rs  smt.rs
toy/src/interpreter/: eval.rs  interpreter.rs  mod.rs  state.rs
toy/src/parser/: grammar.pest  mod.rs  parser.rs  parsing.rs
toy/src/visual/: html.rs  mod.rs
toy/tests/: eval.rs  ex1.zrm  example_module.rs  interpreter.rs  mat.rs  toy.rs
visual/: Cargo.toml  README.md
visual/src/: html.rs  lib.rs
visual/src/html/: mod.rs  unrolling.rs
visual/src/server/: index.html  mod.rs
(+180 files in other folders)
