[package]
name = "zrth-python"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "zrth"
crate-type = ["cdylib"]

[dependencies]
base = { path = "../base" }
smt = { path = "../smt", optional = true }
pyo3 = { version = "0.24" }
tch = { features = ["python-extension"], version = "0.22" }
pyo3-tch = { version = "0.22" }

[features]
# dumping modules to HTML
enable-smt = ["smt"]
