[package]
name = "zrth-python"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "zrth"
crate-type = ["cdylib"]

[dependencies]
base = { path = "../base" }
theory = { path = "../theory" }
pyo3 = { version = "0.24" }
tch = { features = ["python-extension"], version = "0.22" }
pyo3-tch = { version = "0.22" }

