[project]
name = "zrth"
requires-python = ">=3.12,<3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

# version = "0.1.0"
dynamic = ["version"]
description = "Zeroth reactive modules Python interface"
readme = "README.md"

dependencies = [
    "gymnasium>=1.2.3",
    "numpy>=1.26",
    "lark>=1.1",
    "maturin==1.9",
    # for toy and smt crates
    "pysmt>=0.9.6",
    # for torch crate
    "textual>=8.0.0",
    "torch==2.9.0",
    "websockets>=15.0",
    "z3-solver>=4.12",
]

[project.optional-dependencies]
# AI-based inference of invariants and ranking functions (TA2MagicAI).
# Install with: pip install zrth[ai]  or  uv pip install zrth[ai]
ai = [
    "anthropic>=0.52",
]

[build-system]
requires = [
    "maturin>=1.9,<2.0",
    "torch==2.9.0"
]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
#python-source = "zrth"
module-name = "zrth.zrth"

[dependency-groups]
dev = [
    "cvc5>=1.3.2",
    "pytest>=9.0.2",
]
tutorials = [
    "ipykernel>=6.0",
    "matplotlib>=3.8",
    "notebook>=7.0",
    "pygame>=2.5",
]

[tool.pytest.ini_options]
testpaths = ["tests", "../docs/examples"]
addopts = "--import-mode=importlib"


