[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "zrm_torch"
requires-python = ">=3.11,<3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

# we do not build the package right now
[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
numpy = "^2.3.4"
torch = "2.9"
maturin = "1.9"
