[project]
name = "zrm_torch"
requires-python = ">=3.11,<3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dynamic = ["version"]
description = "Instance of `base` structures for Torch tensors and binding to Python and PyTorch"
readme = "README.md"

dependencies = [
  "numpy~=2.3",
  "torch==2.9",
  "maturin==1.9"
]

[build-system]
requires = ["maturin>=1.9,<2.0", "torch"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

