[package]
name = "visual"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../base" }
serde = { version = "1.0", features = ["derive"], optional = true  }
serde_json = { version = "1.0", optional = true }

[features]
default = ["html"]
# dumping modules to HTML
html = ["serde/derive", "serde_json"]
